[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Pirate Bomb/Sprites/idle_boss.png" type="Texture" id=2]
[ext_resource path="res://Enemies/BossEnemy.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Cannon.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.0031, 21.888 )

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 3.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.8, 2.2, 2.4, 2.6, 2.8, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 25.4779
height = 47.3894

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.1202, 22.5194 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 73.8158, 55.6046 )

[node name="BossEnemy" instance=ExtResource( 1 )]
position = Vector2( -0.132433, -2.46896 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 3
script = ExtResource( 3 )
MAX_SPEED = 10
BULLET_SPEED = 100

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
flip_h = true
hframes = 15
frame = 1

[node name="Cannon" parent="Sprite" index="0" instance=ExtResource( 4 )]
position = Vector2( -42.0595, 13.8175 )

[node name="Collider" parent="." index="1"]
visible = false
position = Vector2( -16.1957, -17.5622 )
shape = SubResource( 1 )

[node name="FloorLeft" type="RayCast2D" parent="." index="2"]
position = Vector2( -51.2249, 0.00401306 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="3"]
position = Vector2( 19.05, -0.148651 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="4"]
position = Vector2( -63.0344, -8.09888 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="5"]
position = Vector2( 60.6905, -6.54993 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="SpriteAnimator" parent="." index="6"]
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Run = SubResource( 6 )

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( -16.576, -20.2026 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( -15.6291, -18.6145 )
shape = SubResource( 3 )

[node name="EnemyStats" parent="." index="9"]
max_health = 5
score = 5

[node name="Collider" parent="Viewbox" index="0"]
position = Vector2( 0.264866, 0.93792 )
rotation = -3.14159
scale = Vector2( 4.47691, -3.04494 )
shape = SubResource( 8 )

[node name="FireBulletTimer" type="Timer" parent="." index="11"]
wait_time = 0.75
one_shot = true

[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="Viewbox"]
